# termux-gui

./: Cargo.toml
examples/: hello_world.rs  input1.rs  input2.rs
src/: activity.rs  connection.rs  event.rs  lib.rs  ui.rs  utils.rs
src/event/: handler.rs
src/layouts/: frame_layout.rs  horizontal_scroll_view.rs  linear_layout.rs  mod.rs  nested_scroll_view.rs  radio_group.rs  swipe_refresh_layout.rs  tab_layout.rs
src/widgets/: button.rs  check_box.rs  compound_button.rs  edit_text.rs  image.rs  label.rs  mod.rs  progress_bar.rs  radio_button.rs  space.rs  spinner.rs  switch.rs  toggle_button.rs  web_view.rs
tests/: button.rs  edit_text.rs  image.rs  label.rs
