[package]
name = "tgui-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
bitflags = "1.3"
image = { version = "0.24", optional = true }
base64 = { version = "0.13", optional = true }
serde = { version = "1.0.216", features = ["derive"] }
rustix = { version = "0.38.42", features = ["net"], optional = true }

[features]
buf = ["dep:rustix"]
image = ["dep:image", "dep:base64"]

[lib]
name = "tgui"


