[package]
name = "tgui-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
serde = { version = "1.0.216", features = ["derive"] }

# image widget
image = { version = "0.25", optional = true }
base64 = { version = "0.22", optional = true }

# shared buffer
rustix = { version = "0.38.42", features = ["net"], optional = true }

[features]
buf = ["dep:rustix"]
image = ["dep:image", "dep:base64"]

[lib]
name = "tgui"


